@@ -2,6 +2,7 @@
 	* (seebs) don't try to search path when you don't have one
 	* (seebs) merge in ports branch
 	* (seebs) fix permissions on subports/preports
+	* (seebs) try to force debug fd to 2
 
 2011-03-24:
 	* (seebs) more work on OS X port.
